# stanislav-petrov-benchmark

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  benchmark.py  config.py  main.py  reporting.py  scenario.py
src/tools/: __init__.py  nuclear.py  satellite.py
